# VolvoOA

./: .clang-format  .clang-tidy  .gitmodules  README.md  VolvoCANbus.ino  install.sh  install_requirements.sh
.github/workflows/: ci.yml
LINbusKeyboardEmulator/: LINbusKeyboardEmulator.ino  README.md  VolvoCANbus.ino
LINbusKeyboardEmulator/src/: keyboardEmulator.cpp  systemState.h  volvoState.cpp  volvoState.h
LINbusKeyboardEmulator/src/lin/: linBus.cpp  linBus.h  linFrame.cpp  linFrame.h
autoapp/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Readme.md  autoapp.service.in
autoapp/src/backend/: core.cpp  core.h  main.cpp  settingsManager.cpp  settingsManager.h
autoapp/src/backend/androidAuto/: androidAutoDevice.cpp  androidAutoDevice.h  androidAutoService.cpp  androidAutoService.h
autoapp/src/backend/app/: appUpdater.cpp  appUpdater.h  systemUpdater.cpp  systemUpdater.h
autoapp/src/backend/car/: CANService.cpp  CANService.h  arduinoService.cpp  arduinoService.h  arduinoUpdater.cpp  arduinoUpdater.h  longanI2CCanBusDevice.cpp  longanI2CCanBusDevice.h
autoapp/src/backend/logging/: logger.cpp  logger.h  loggingCategory.h
autoapp/src/backend/plugins/canbus/longan-i2c/: longanI2CCanBusDevice.cpp  longanI2CCanBusPlugin.cpp  longanI2CCanBusPlugin.h  longan_i2c_canbus.json
autoapp/src/backend/settings/: guistyle.cpp  guistyle.h  settingsManager.cpp  settingsManager.h
autoapp/src/backend/usb/: usbDevice.cpp  usbDevice.h  usbService.cpp  usbService.h
autoapp/src/frontend/: main.qml  qml.qrc
autoapp/src/frontend/androidAuto/: AndroidAutoView.qml
autoapp/src/frontend/commons/: Label.qml  ScreenElement.qml  Switch.qml  Title.qml
autoapp/src/frontend/main/: EmptyListIcon.qml  MainView.qml
autoapp/src/frontend/settings/: AndroidAutoTab.qml  ManagementTab.qml  SettingsView.qml
autoapp/src/frontend/window/: FocusIndicator.qml  Logo.qml  MainBar.qml
commons/: LinFrame.cpp  LinFrame.h  canBus.cpp  canBus.h  linBus.h  obdReader.h
docs/: README.md
scripts/: install_requirements.sh
src/: canBus.cpp  canBus.h  keyboardEmulator.cpp  keyboardEmulator.h  linBus.cpp  linBus.h  linFrame.cpp  linFrame.h  volvoState.cpp  volvoState.h
